# de-hiring-take-home

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: extract.py  load.py  models.py  tracker.py  transform.py
tests/: test_extract.py  test_load.py  test_transform.py
